NR: Put show_if tag inside objectives

--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -400,8 +400,25 @@
                 description= _ "Resist for as long as you can"
                 condition=win
                 show_turn_counter=yes
+                [show_if]
+                    {VARIABLE_CONDITIONAL must_kill_enemies boolean_equals no}
+                [/show_if]
             [/objective]
-            {ALTERNATIVE_OBJECTIVE_BONUS ( _ "Defeat the enemy leaders")}
+            [objective]
+                {ALTERNATIVE_OBJECTIVE_CAPTION}
+                description= _ "Defeat the enemy leaders"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL must_kill_enemies boolean_equals no}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Defeat the enemy leaders"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL must_kill_enemies boolean_equals yes}
+                [/show_if]
+            [/objective]
             [objective]
                 description= _ "Death of Tallin"
                 condition=lose
@@ -413,6 +430,14 @@
             [objective]
                 description= _ "Death of Ro’Sothian"
                 condition=lose
+            [/objective]
+            [objective]
+                description= _ "Turns run out"
+                condition=lose
+                show_turn_counter=yes
+                [show_if]
+                    {VARIABLE_CONDITIONAL must_kill_enemies boolean_equals yes}
+                [/show_if]
             [/objective]
 
             [gold_carryover]
@@ -636,13 +661,27 @@
         [objectives]
             side=7
             [objective]
-                description= _ "Help Tallin defeat the enemy leaders or"
-                condition=win
-            [/objective]
-            [objective]
                 description= _ "Resist for as long as you can"
                 condition=win
                 show_turn_counter=yes
+                [show_if]
+                    {VARIABLE_CONDITIONAL must_kill_enemies boolean_equals no}
+                [/show_if]
+            [/objective]
+            [objective]
+                {ALTERNATIVE_OBJECTIVE_CAPTION}
+                description= _ "Help Tallin defeat the enemy leaders"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL must_kill_enemies boolean_equals no}
+                [/show_if]
+            [/objective]
+            [objective]
+                description= _ "Help Tallin defeat the enemy leaders"
+                condition=win
+                [show_if]
+                    {VARIABLE_CONDITIONAL must_kill_enemies boolean_equals yes}
+                [/show_if]
             [/objective]
             [objective]
                 description= _ "Death of Tallin"
@@ -655,6 +694,14 @@
             [objective]
                 description= _ "Death of Ro’Sothian"
                 condition=lose
+            [/objective]
+            [objective]
+                description= _ "Turns run out"
+                condition=lose
+                show_turn_counter=yes
+                [show_if]
+                    {VARIABLE_CONDITIONAL must_kill_enemies boolean_equals yes}
+                [/show_if]
             [/objective]
 
             [gold_carryover]
@@ -777,31 +824,10 @@
                         speaker=Bor
                         message= _ "You are a fool, human! We shall crush and destroy you!"
                     [/message]
-                    [objectives]
-                        side=6
-                        [objective]
-                            description= _ "Help Tallin defeat the enemy leaders"
-                            condition=win
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Tallin"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Ro’Arthian"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Ro’Sothian"
-                            condition=lose
-                        [/objective]
 
-                        {TURNS_RUN_OUT}
-
-                        [gold_carryover]
-                            carryover_percentage=40
-                        [/gold_carryover]
-                    [/objectives]
+                    {VARIABLE must_kill_enemies yes}
+                    [show_objectives]
+                    [/show_objectives]
                 [/command]
             [/option]
             [option]
@@ -924,32 +950,9 @@
                         message= _ "You are a fool, human! Watch how we will crush and destroy you!"
                     [/message]
 
-                    [objectives]
-                        side=1
-                        [objective]
-                            description= _ "Defeat the enemy leaders"
-                            condition=win
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Tallin"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Ro’Arthian"
-                            condition=lose
-                        [/objective]
-                        [objective]
-                            description= _ "Death of Ro’Sothian"
-                            condition=lose
-                        [/objective]
-
-                        {TURNS_RUN_OUT}
-
-                        [gold_carryover]
-                            bonus=yes
-                            carryover_percentage=40
-                        [/gold_carryover]
-                    [/objectives]
+                    {VARIABLE must_kill_enemies yes}
+                    [show_objectives]
+                    [/show_objectives]
                 [/command]
             [/option]
             [option]
@@ -968,6 +971,8 @@
     # Ensure correct carryover if all enemy leaders are defeated
     [event]
         name=enemies defeated
+
+        {CLEAR_VARIABLE must_kill_enemies}
 
         [endlevel]
             result=victory
