NR: Fix ignored gender on fake units' moves

--- a/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/10a_Stolen_Gold.cfg
@@ -720,59 +720,28 @@
             [/have_unit]
         [/filter_condition]
 
-        [move_unit_fake]
-            type=Elvish Marshal
-            side=6
-            x=30,29,28
-            y=15,15,15
-        [/move_unit_fake]
-
         [unit]
             id=Hidel
             type=Elvish Marshal
             name= _ "Hidel"
             profile=portraits/Hidel.png
             canrecruit=yes
-            x=28
-            y=15
+            x,y=30,15
             side=6
         [/unit]
+        {MOVE_UNIT id=Hidel 28 15}
 
-        [move_unit_fake]
-            type=Elvish Fighter
-            side=6
-            x=30,29,28
-            y=14,14,14
-        [/move_unit_fake]
+        {GENERIC_UNIT 6 "Elvish Fighter" 30 14}
+        {MOVE_UNIT x,y=30,14 28 14}
 
-        {GENERIC_UNIT 6 "Elvish Fighter" 28 14}
+        {GENERIC_UNIT 6 "Elvish Fighter" 30 13}
+        {MOVE_UNIT x,y=30,13 28 13}
 
-        [move_unit_fake]
-            type=Elvish Fighter
-            side=6
-            x=30,29,28
-            y=13,13,13
-        [/move_unit_fake]
+        {GENERIC_UNIT 6 "Elvish Archer" 30 16}
+        {MOVE_UNIT x,y=30,16 28 16}
 
-        {GENERIC_UNIT 6 "Elvish Fighter" 28 13}
-
-        [move_unit_fake]
-            type=Elvish Archer
-            side=6
-            x=30,29,28
-            y=16,16,16
-        [/move_unit_fake]
-
-        {GENERIC_UNIT 6 "Elvish Archer" 28 16}
-
-        [move_unit_fake]
-            type=Elvish Shaman
-            side=6
-            x=30,29
-            y=15,16
-        [/move_unit_fake]
-
-        {GENERIC_UNIT 6 "Elvish Shaman" 29 16}
+        {GENERIC_UNIT 6 "Elvish Shaman" 30 15}
+        {MOVE_UNIT x,y=30,15 29 16}
 
         [message]
             speaker=Hidel
@@ -1053,64 +1022,37 @@
                 [/message]
             [/then]
             [else]
-                [move_unit_fake]
-                    type=Elvish Marshal
-                    side=6
-                    x=30,29,28
-                    y=15,15,15
-                [/move_unit_fake]
-
                 [unit]
                     id=Hidel
                     type=Elvish Marshal
                     profile=portraits/Hidel.png
                     name= _ "Hidel"
-                    x,y=28,15
+                    x,y=30,15
                     side=6
                     canrecruit=yes
                 [/unit]
 
-                [move_unit_fake]
-                    type=Elvish Avenger
-                    side=6
-                    x=30,29,28
-                    y=14,14,14
-                [/move_unit_fake]
+                {MOVE_UNIT id=Hidel 28 15}
 
                 [unit]
                     type=Elvish Avenger
-                    x,y=28,14
+                    x,y=30,14
                     side=6
                     id=Sisal
                     name= _ "Sisal"
+                    gender=female
                 [/unit]
 
-                [move_unit_fake]
-                    type=Elvish Fighter
-                    side=6
-                    x=30,29,28
-                    y=13,13,13
-                [/move_unit_fake]
+                {MOVE_UNIT id=Sisal 28 14}
 
-                {GENERIC_UNIT 6 "Elvish Fighter" 28 13}
+                {GENERIC_UNIT 6 "Elvish Fighter" 30 13}
+                {MOVE_UNIT x,y=30,13 28 13}
 
-                [move_unit_fake]
-                    type=Elvish Archer
-                    side=6
-                    x=30,29,28
-                    y=16,16,16
-                [/move_unit_fake]
+                {GENERIC_UNIT 6 "Elvish Archer" 30 16}
+                {MOVE_UNIT x,y=30,16 28 16}
 
-                {GENERIC_UNIT 6 "Elvish Archer" 28 16}
-
-                [move_unit_fake]
-                    type=Elvish Shaman
-                    side=6
-                    x=30,29
-                    y=15,16
-                [/move_unit_fake]
-
-                {GENERIC_UNIT 6 "Elvish Shaman" 29 16}
+                {GENERIC_UNIT 6 "Elvish Shaman" 30 15}
+                {MOVE_UNIT x,y=30,15 29 16}
 
                 [message]
                     speaker=Hidel
