--- a/data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg
@@ -397,6 +397,7 @@
 
                 [move_unit_fake]
                     type=Elvish Avenger
+                    gender=female
                     side=1
                     x=32,31,30,29,28,27,26,26,26,26,26,26,25,24,23,23,23,23,23,23,23,23,23
                     y=13,14,14,14,14,15,15,16,17,18,19,20,21,21,22,23,24,25,26,27,28,29,30
