NR S7a: Store Ro'Sothian into a variable
... instead of killing him and creating him from scratch
every time

--- a/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
@@ -623,6 +623,13 @@
             message= _ "Very well."
         [/message]
 
+        [store_unit]
+            [filter]
+                id=Ro'Sothian
+            [/filter]
+            kill=no
+            variable=rosothian
+        [/store_unit]
         {PLACE_IMAGE "units/undead-necromancers/lich.png~RC(magenta>green)~BLIT(items/cage.png)" 25 6}
 
         [message]
@@ -650,13 +657,20 @@
                 x,y=25,6
             [/remove_item]
 
-            [unit]
-                type=Lich
-                id="Ro'Sothian"
-                name= _ "Ro’Sothian"
-                side=3
+            [unstore_unit]
+                variable=rosothian
                 x,y=25,6
-            [/unit]
+                find_vacant=yes
+            [/unstore_unit]
+            [heal_unit]
+                [filter]
+                    id=Ro'Sothian
+                [/filter]
+                amount=full
+                moves=full
+                restore_attacks=yes
+            [/heal_unit]
+            {CLEAR_VARIABLE rosothian,heal_amount}
 
             [message]
                 speaker="Ro'Sothian"
@@ -700,6 +714,13 @@
                     message= _ "Back to jail, my friend."
                 [/message]
 
+                [store_unit]
+                    [filter]
+                        id=Ro'Sothian
+                    [/filter]
+                    kill=no
+                    variable=rosothian
+                [/store_unit]
                 {PLACE_IMAGE "units/undead-necromancers/lich.png~RC(magenta>green)~BLIT(items/cage.png)" 25 6}
             [/event]
         [/event]
@@ -794,18 +815,33 @@
             message= _ "Hrmph. What do you think, brother?"
         [/message]
 
-        [unit]
-            type=Lich
-            id="Ro'Sothian"
-            name=_ "Ro’Sothian"
-            profile=portraits/Ro_Sothian.png
-            side=3
-            x,y=25,6
-        [/unit]
+        [if]
+            [not]
+                [have_unit]
+                    id=Ro'Sothian
+                [/have_unit]
+            [/not]
+            [then]
+                [remove_item]
+                    x,y=25,6
+                [/remove_item]
 
-        [remove_item]
-            x,y=25,6
-        [/remove_item]
+                [unstore_unit]
+                    variable=rosothian
+                    x,y=25,6
+                    find_vacant=yes
+                [/unstore_unit]
+                [heal_unit]
+                    [filter]
+                        id=Ro'Sothian
+                    [/filter]
+                    amount=full
+                    moves=full
+                    restore_attacks=yes
+                [/heal_unit]
+                {CLEAR_VARIABLE rosothian,heal_amount}
+            [/then]
+        [/if]
 
         [message]
             speaker="Ro'Sothian"
