NR S13a: Improvement to the AIs
1) Rakshas's units will not idle around him anymore
2) Hamel will play more carefully, and his recruits will be
chosen according to the ToD (i.e. aggressive during the day,
defensive at night)

--- a/data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg
@@ -58,7 +58,7 @@
         user_team_name=_"Orcs"
         [ai]
             [goal]
-                name=target
+                name=protect_location
                 [criteria]
                     x=30
                     y=30
@@ -313,21 +313,43 @@
         user_team_name=_"Alliance"
         persistent=yes
         [ai]
-            passive_leader=yes
-            simple_targeting=yes
-            aggression=1.0
-            caution=-5.0
-            attack_depth=5
-            village_value=0.0
-            leader_value=50.0
-            villages_per_scout=0.0
-            [goal]
-                name=target
-                [criteria]
-                    id=Rakshas
-                [/criteria]
-                value=500
-            [/goal]
+            leader_aggression=-10.0
+            {AI_SIMPLE_DAY_ASPECT   aggression 0.5}
+            {AI_SIMPLE_DAY_ASPECT   caution    0.5}
+            {AI_SIMPLE_NIGHT_ASPECT aggression 0.0}
+            {AI_SIMPLE_NIGHT_ASPECT caution    2.0}
+            {AI_SIMPLE_NIGHT_ASPECT grouping   defensive}
+        [/ai]
+        [ai]
+            [aspect]
+                id=recruitment_instructions
+                [facet]
+                    time_of_day=dawn,morning,afternoon
+                    [value]
+                        [recruit]
+                            type=Dwarvish Steelclad,Dwarvish Thunderguard
+                            importance=2
+                        [/recruit]
+                        [recruit]
+                            type=Dwarvish Stalwart
+                            importance=0
+                        [/recruit]
+                    [/value]
+                [/facet]
+                [facet]
+                    time_of_day=dusk,first watch,second watch
+                    [value]
+                        [recruit]
+                            type=Dwarvish Steelclad,Dwarvish Thunderguard
+                            importance=0
+                        [/recruit]
+                        [recruit]
+                            type=Dwarvish Stalwart
+                            importance=2
+                        [/recruit]
+                    [/value]
+                [/facet]
+            [/aspect]
         [/ai]
         {FLAG_VARIANT knalgan}
     [/side]
