Healing: Perform rest healing on turn 2.

--- a/data/test/scenarios/heal.cfg
+++ b/data/test/scenarios/heal.cfg
@@ -72,24 +72,24 @@
         [end_turn][/end_turn]
     [/event]
 
-    # side 1 gets healing but no rest healing (??)
+    # side 1 gets healing and rest healing
     [event]
         name=side 1 turn 2 refresh
-        {EXPECT_HITPOINTS  9  1  9  1}
+        {EXPECT_HITPOINTS 11  3  9  1}
         [end_turn][/end_turn]
     [/event]
 
     # side 2 gets healing and rest healing
     [event]
         name=side 2 turn 2 refresh
-        {EXPECT_HITPOINTS  9  1 19  3}
+        {EXPECT_HITPOINTS 11  3 19  3}
         [end_turn][/end_turn]
     [/event]
 
     # side 1 gets healing and rest healing
     [event]
         name=side 1 turn 3 refresh
-        {EXPECT_HITPOINTS 19  3 19  3}
+        {EXPECT_HITPOINTS 21  5 19  3}
         [move_unit]
             side=1
             canrecruit=yes
@@ -112,7 +112,7 @@
     # side 2 gets healing and rest healing
     [event]
         name=side 2 turn 3 refresh
-        {EXPECT_HITPOINTS 19  3 29  5}
+        {EXPECT_HITPOINTS 21  5 29  5}
         [move_unit]
             side=2
             canrecruit=yes
@@ -135,14 +135,14 @@
     # side 1 gets healing but not rest healing
     [event]
         name=side 1 turn 4 refresh
-        {EXPECT_HITPOINTS 27  3 29  5}
+        {EXPECT_HITPOINTS 29  5 29  5}
         [end_turn][/end_turn]
     [/event]
 
     # side 2 gets healing but not rest healing
     [event]
         name=side 2 turn 4 refresh
-        {EXPECT_HITPOINTS 27  3 37  5}
+        {EXPECT_HITPOINTS 29  5 37  5}
         [end_turn][/end_turn]
     [/event]
 
