THoT S12: rebalanced AI gold

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
@@ -51,7 +51,7 @@
     [side]
         side=2
         controller=ai
-        recruit="Wraith,Shadow,Necrophage,Revenant,Deathblade,Bone Shooter"
+        recruit="Necrophage,Draug,Deathblade,Banebow"
         gold=0 # Will change when the side is activated
         income=-2
         team_name=evil
@@ -97,7 +97,7 @@
         {RECRUITS_MASKED_DWARVES}
 
         gold=0 # Will change when the side is activated
-        {INCOME 9 13 17}
+        {INCOME 5 9 13}
         team_name=evil
         user_team_name= _ "Masked Dwarves"
         {FLAG_VARIANT knalgan}
@@ -130,7 +130,7 @@
         {RECRUITS_MASKED_DWARVES}
 
         gold=0 # Will change when the side is activated
-        {INCOME 11 15 19}
+        {INCOME 8 12 16}
         team_name=evil
         user_team_name= _ "Masked Dwarves"
         {FLAG_VARIANT knalgan}
@@ -159,7 +159,7 @@
         {RECRUITS_MASKED_DWARVES}
 
         gold=0 # Will change when the side is activated
-        {INCOME 11 15 19}
+        {INCOME 8 12 16}
         team_name=evil
         user_team_name= _ "Masked Dwarves"
         {FLAG_VARIANT knalgan}
@@ -613,7 +613,7 @@
         # Activate side 3
         [gold]
             side=3
-            amount={ON_DIFFICULTY 70 120 170}
+            amount={ON_DIFFICULTY 30 50 70}
         [/gold]
     [/event]
 
@@ -640,6 +640,11 @@
             speaker=Dufon
             message= _ "Fools! Even should you defeat me, the master's ritual will soon be complete and you shall all become his slaves!"
         [/message]
+        
+        [gold]
+            side=3
+            amount={ON_DIFFICULTY 40 60 80}
+        [/gold]
     [/event]
 
     [event]
@@ -1167,7 +1172,7 @@
         # Karrag's initial wave
         [gold]
             side=2
-            amount={ON_DIFFICULTY 100 125 150}
+            amount={ON_DIFFICULTY 130 150 170}
         [/gold]
     [/event]
 
@@ -1200,7 +1205,6 @@
             message= _ "No! You are the one who owes our brethren their freedom! You have ensnared their minds with your foul magic and now we are here to put an end to your tyrannical rule!"
         [/message]
 
-        # po: Karrag uses dirtgrubber here as a derogatory racial term, i.e. to show that he believes dwarves are the "true people"/master race, and that other races are just scum. Dirtgrubber is made up of the words "dirt" and "grub". 
         [message]
             speaker=Karrag
             message= _ "Any enemy of my rule is no better than the filthiest of dirtgrubbers. You no longer belong to the true people. You will become my slaves!"
@@ -1214,7 +1218,7 @@
         # Give Karrag more gold
         [gold]
             side=2
-            amount={ON_DIFFICULTY 100 150 200}
+            amount={ON_DIFFICULTY 120 160 200}
         [/gold]
     [/event]
 
