--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -1004,6 +1004,10 @@
 		<Unit filename="../../src/scripting/lua_rng.hpp" />
 		<Unit filename="../../src/scripting/lua_team.cpp" />
 		<Unit filename="../../src/scripting/lua_team.hpp" />
+		<Unit filename="../../src/scripting/lua_terrainfilter.cpp" />
+		<Unit filename="../../src/scripting/lua_terrainfilter.hpp" />
+		<Unit filename="../../src/scripting/lua_terrainmap.cpp" />
+		<Unit filename="../../src/scripting/lua_terrainmap.hpp" /> 
 		<Unit filename="../../src/scripting/lua_unit.cpp" />
 		<Unit filename="../../src/scripting/lua_unit.hpp" />
 		<Unit filename="../../src/scripting/lua_unit_attacks.cpp" />
