--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -914,6 +914,8 @@
 		<Unit filename="../../src/pathfind/teleport.hpp" />
 		<Unit filename="../../src/pathutils.cpp" />
 		<Unit filename="../../src/pathutils.hpp" />
+		<Unit filename="../../src/pathutils_impl.cpp" />
+		<Unit filename="../../src/pathutils_impl.hpp" />
 		<Unit filename="../../src/persist_context.cpp" />
 		<Unit filename="../../src/persist_context.hpp" />
 		<Unit filename="../../src/persist_manager.cpp" />
