Spelling correction for 051cec2d.
[ci skip]

--- a/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
@@ -759,7 +759,7 @@
 
         [message]
             speaker="Mal M'Brin"
-            message = _ "Humans are ultimately a week breed. I taught them to summon powers they could not control. In their greed, they never stopped to wonder if they could master the sorcery, or if it would master them and their minds in turn. Content with only meager tricks, they never even noticed as I siphoned away the energy they summoned for myself. I grew more powerful day by day, yet not one of those filthy tree-killers thought that I posed a threat to them. Even when I ascended to undeath, they never questioned my teachings until they had all become my mindless slaves!"
+            message = _ "Humans are ultimately a weak breed. I taught them to summon powers they could not control. In their greed, they never stopped to wonder if they could master the sorcery, or if it would master them and their minds in turn. Content with only meager tricks, they never even noticed as I siphoned away the energy they summoned for myself. I grew more powerful day by day, yet not one of those filthy tree-killers thought that I posed a threat to them. Even when I ascended to undeath, they never questioned my teachings until they had all become my mindless slaves!"
         [/message]
 
         [message]
