--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -577,6 +577,10 @@
         [event]
             name=attack end
             delayed_variable_substitution=yes
+            
+        [filter]
+            {FILTER}
+        [/filter]
 
             [foreach]
                 array=unit.attack
@@ -664,6 +668,10 @@
         [event]
             name=attack end
             delayed_variable_substitution=yes
+            
+        [filter_second]
+            {FILTER}
+        [/filter_second]
 
             [foreach]
                 array=second_unit.attack
