DW: Use show_if in the objectives tag

--- a/data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg
+++ b/data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg
@@ -195,6 +195,12 @@
             [objective]
                 description= _ "Death of Caladon"
                 condition=lose
+                [show_if]
+                    [have_unit]
+                        id=Caladon
+                        side=1
+                    [/have_unit]
+                [/show_if]
             [/objective]
 
             {TURNS_RUN_OUT}
@@ -661,18 +667,6 @@
         [animate_unit]
             flag=post_teleport
         [/animate_unit]
-
-        # Remove the death of Caladon from a the loss conditions, but
-        # we probably don't need to make a point of it, so silent=yes.
-        [objectives]
-            silent=yes
-            side=1
-            [objective]
-                description= _ "Pry the flaming sword from the dead hand of its owner"
-                condition=win
-            [/objective]
-            {HOW_TO_LOSE}
-        [/objectives]
 
         [delay]
             time=700
