DW S10: Avoid filter_wml

--- a/data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg
+++ b/data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg
@@ -214,9 +214,9 @@
         [role]
             side=1
             race=merman
-            [filter_wml]
-                upkeep=full
-            [/filter_wml]
+            [not]
+                trait=loyal
+            [/not]
             type=Mermaid Siren,Mermaid Diviner,Merman Entangler,Mermaid Enchantress,Mermaid Priestess,Merman Netcaster,Merman Brawler,Mermaid Initiate,Merman Javelineer,Merman Spearman,Merman Hunter,Merman Citizen
             role=spy
         [/role]
