DW S12: Fix event filter

--- a/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
+++ b/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
@@ -808,6 +808,9 @@
             y=11
             side=1
             race=bats
+            [or]
+                id=Undead Bat
+            [/or]
         [/filter]
 
         [message]
@@ -845,6 +848,9 @@
             side=1
             [not]
                 race=bats,monster
+                [or]
+                    id=Undead Bat
+                [/or]
             [/not]
         [/filter]
 
