DW S12: Fix event filter

--- a/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
+++ b/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
@@ -804,10 +804,14 @@
         name=moveto
 
         [filter]
-            x=14
-            y=11
+            x,y=14,11
             side=1
-            race=bats
+            [and]
+                race=bats
+                [or]
+                    variation=bat
+                [/or]
+            [/and]
         [/filter]
 
         [message]
@@ -845,6 +849,9 @@
             side=1
             [not]
                 race=bats,monster
+                [or]
+                    variation=bat
+                [/or]
             [/not]
         [/filter]
 
