DiD S3: Redraw fog and shroud after retrieving your units

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -319,6 +319,9 @@
 
         # Regain control of "rebel" ghosts
         {MODIFY_UNIT (side,canrecruit=4,no) side 1}
+        [redraw]
+            clear_shroud=yes
+        [/redraw]
 
         [message]
             speaker=Malin Keshar
