--- a/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg
@@ -227,7 +227,7 @@ end
             side=1
 
             [not]
-                type=Ghost,Wraith,Spectre,Shadow,Nightgaunt,Vampire Bat,Blood Bat,Dread Bat
+                type_adv_tree=Ghost,Vampire Bat
             [/not]
 
             [filter_location]
@@ -255,7 +255,7 @@ end
         [store_locations]
             [filter]
                 [not]
-                    type=Ghost,Wraith,Spectre,Shadow,Nightgaunt,Vampire Bat,Blood Bat,Dread Bat
+                    type_adv_tree=Ghost,Vampire Bat
                 [/not]
             [/filter]
 
@@ -320,7 +320,7 @@ end
             terrain=Ai
             [filter]
                 [not]
-                    type=Ghost,Wraith,Spectre,Shadow,Nightgaunt,Vampire Bat,Blood Bat,Dread Bat
+                    type_adv_tree=Ghost,Vampire Bat
                 [/not]
             [/filter]
 
