--- a/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg
@@ -663,7 +663,7 @@
             x,y=$bookX,$bookY
             side=1
             [not]
-                type=Ghost,Wraith,Spectre,Shadow,Nightgaunt,Vampire Bat,Blood Bat,Dread Bat
+                type_adv_tree=Ghost,Vampire Bat
             [/not]
         [/filter]
 
