--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -154,20 +154,27 @@
             aggression=1.0
             caution=0.4
             grouping=offensive
-            [protect_location]
-                # Manor entrance
-                x,y=7,8
+
+            [goal]
+                name=protect_location
+                [criteria]
+                    # Manor entrance
+                    x,y=7,8
+                [/criteria]
                 protect_radius=5
                 value=4
-            [/protect_location]
+            [/goal]
 
-            [protect_location]
-                # Rest of city
-                x=3-22
-                y=6-22
+            [goal]
+                name=protect_location
+                [criteria]
+                    # Rest of city
+                    x=3-22
+                    y=6-22
+                [/criteria]
                 protect_radius=1
                 value=2
-            [/protect_location]
+            [/goal]
 
             [goal]
                 name=protect_unit
