DiD S1: Instead of killing the loyals, just assign them to the ally.

--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -427,15 +427,16 @@
             [/else]
         [/if]
 
-        [kill]
-            side=1
-            race=human
-            [not]
-                id=Malin Keshar
-            [/not]
-            animate=no
-            fire_event=no
-        [/kill]
+        [modify_unit]
+            [filter]
+                side=1
+                race=human
+                [not]
+                    id=Malin Keshar
+                [/not]
+            [/filter]
+            side=2
+        [/modify_unit]
     [/event]
 
     {HERODEATH_MALIN}
