DiD S1: Add a dialog hint about the loyals staying behind.
The other dialog path needs no change.

--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -378,6 +378,16 @@
                     speaker=Drogan
                     message= _ "Begone, now. I’ve no wish to be forced to send the soldiers after you. Your father would be ashamed to see the end to which you’ve come."
                 [/message]
+
+                # Hint that the loyal units stay behind
+                [message]
+                    side=1
+                    race=human
+                    [not]
+                        id=Malin Keshar
+                    [/not]
+                    message= _ "Goodbye, commander."
+                [/message]
             [/then]
             [else]
                 [message]
@@ -407,6 +417,7 @@
 
                 [message]
                     speaker=Malin Keshar
+                    # po: The fullstop before "But" is not an error. "But revenge" means "Only revenge".
                     message= _ "My hands were never apt for healing. But revenge I can give her."
                 [/message]
 
