--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -578,10 +578,6 @@
             name=attack end
             delayed_variable_substitution=yes
 
-            [filter]
-                {FILTER}
-            [/filter]
-
             [foreach]
                 array=unit.attack
                 [do]
@@ -595,11 +591,18 @@
                     {CLEAR_VARIABLE this_item.specials.original_chance_to_hit}
                 [/do]
             [/foreach]
-
-            [unstore_unit]
-                variable=unit
-                find_vacant=no
-            [/unstore_unit]
+            
+            [if]
+              [have_unit]
+               id=$unit.id
+              [/have_unit]
+                [then]
+                  [unstore_unit]
+                      variable=unit
+                      find_vacant=no
+                  [/unstore_unit]
+                [/then]
+            [/if]
         [/event]
     [/event]
 
@@ -669,10 +672,6 @@
             name=attack end
             delayed_variable_substitution=yes
 
-            [filter_second]
-                {FILTER}
-            [/filter_second]
-
             [foreach]
                 array=second_unit.attack
                 [do]
@@ -686,11 +685,18 @@
                     {CLEAR_VARIABLE this_item.specials.original_chance_to_hit}
                 [/do]
             [/foreach]
-
-            [unstore_unit]
-                variable=second_unit
-                find_vacant=no
-            [/unstore_unit]
+            
+            [if]
+              [have_unit]
+               id=$second_unit.id
+              [/have_unit]
+                [then]
+                  [unstore_unit]
+                      variable=second_unit
+                      find_vacant=no
+                  [/unstore_unit]
+                [/then]
+            [/if]
         [/event]
     [/event]
 #enddef
