--- a/data/core/macros/utils.cfg
+++ b/data/core/macros/utils.cfg
@@ -578,6 +578,12 @@
             name=attack end
             delayed_variable_substitution=yes
 
+            [filter_condition]  
+              [have_unit]
+                 id=$unit.id
+              [/have_unit]
+           [/filter_condition]
+
             [foreach]
                 array=unit.attack
                 [do]
@@ -591,18 +597,11 @@
                     {CLEAR_VARIABLE this_item.specials.original_chance_to_hit}
                 [/do]
             [/foreach]
-            
-            [if]
-              [have_unit]
-               id=$unit.id
-              [/have_unit]
-                [then]
-                  [unstore_unit]
-                      variable=unit
-                      find_vacant=no
-                  [/unstore_unit]
-                [/then]
-            [/if]
+ 
+            [unstore_unit]
+                variable=unit
+                find_vacant=no
+            [/unstore_unit]
         [/event]
     [/event]
 
@@ -672,6 +671,12 @@
             name=attack end
             delayed_variable_substitution=yes
 
+            [filter_condition]  
+              [have_unit]
+                 id=$second_unit.id
+              [/have_unit]
+           [/filter_condition]
+ 
             [foreach]
                 array=second_unit.attack
                 [do]
@@ -685,18 +690,11 @@
                     {CLEAR_VARIABLE this_item.specials.original_chance_to_hit}
                 [/do]
             [/foreach]
-            
-            [if]
-              [have_unit]
-               id=$second_unit.id
-              [/have_unit]
-                [then]
-                  [unstore_unit]
-                      variable=second_unit
-                      find_vacant=no
-                  [/unstore_unit]
-                [/then]
-            [/if]
+ 
+            [unstore_unit]
+                variable=second_unit
+                find_vacant=no
+            [/unstore_unit]
         [/event]
     [/event]
 #enddef
